--- a/main.css
+++ b/main.css
@@ -3,88 +3,84 @@
 *,
 ::after,
 ::before {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    background: rgb(126, 126, 126);
-    overflow: hidden;
+  margin: 0;
+  height: 100vh;
+  font-family: 'Roboto', sans-serif;
+  background: #000000;
+  overflow: hidden;
 }
-
-.btn {
-    border: none;
-    background: inherit;
-}
-
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 .barleybreak__title {
-    margin: 0;
-    margin-top: 80px;
-    font-size: 60px;
-    text-align: center;
+  margin: 0;
+  margin-top: 80px;
+  font-size: 60px;
+  text-align: center;
 }
 
 .barleybreak__desk {
-    margin:  0 auto;
-    width: 420px;
-    height: 420px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
+  margin: 0 auto;
+  max-width: 420px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 5px;
 }
 
 .barleybreak__mix {
-    margin: 0 auto;
-    margin-top: 20px;
-    display: block;
-    padding: 5px 10px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 25px;
-    color: #fff;
-    background-color: #000000;
-    border-radius: 5px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 15px;
+  padding: 5px 15px;
+  background-color: inherit;
+  font-size: 20px;
+  font-family: 'Rubik', sans-serif;
+  color: #fff;
+  border: none;
+  border: 3px #9d9d9d;
+  border-style: dotted;
+  cursor: pointer;
 }
 
 .barleybreak__cell {
-    width: 100px;
-    height: 100px;
+  aspect-ratio: 1;
+  width: 100%;
+  height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    background-color: #000000;
-    font-size: 50px;
-    color: #dedede;
-    border: 4px solid #dedede;
+  background-color: #000000;
+  border: 2px solid #515151;
+  font-size: 50px;
+  color: #dedede;
+  cursor: pointer;
 
-    transition: all .6s ease;
+  transition: all 0.6s ease;
 }
 
 .barleybreak__cell.end {
-    animation-name: endAnimation;
-    animation-duration: 1.2s;
-    animation-timing-function: ease-in-out;
-
+  animation-name: endAnimation;
+  animation-duration: 1.2s;
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes endAnimation {
-    20% {
-        border-color: rgb(251, 104, 7);
-    }
-    80% {
-        border-color: rgb(193, 6, 255);
-    }
-    100% {
-        border-color: #dedede;
-    }
+  20% {
+    border-color: rgb(251, 104, 7);
+  }
+  80% {
+    border-color: rgb(193, 6, 255);
+  }
+  100% {
+    border-color: #515151;
+  }
 }
-
