--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
   height: 100vh;
   font-family: 'Roboto', sans-serif;
-  background: #000000;
+  background-color: #2e445c;
   overflow: hidden;
 }
 
@@ -27,18 +27,21 @@ body {
   gap: 5px;
 }
 
-.barleybreak__mix {
+.barleybreak__btn-mix {
   display: block;
   margin: 0 auto;
   margin-top: 15px;
-  padding: 5px 15px;
+  padding: 6px 17px;
   background-color: inherit;
   font-size: 20px;
   font-family: 'Rubik', sans-serif;
   color: #fff;
-  border: none;
+  /* border: none;
   border: 3px #9d9d9d;
-  border-style: dotted;
+  border-style: dotted; */
+  border: 2px solid #192431;
+  border-radius: 3px;
+
   cursor: pointer;
 }
 
@@ -51,12 +54,15 @@ body {
   justify-content: center;
   align-items: center;
 
-  background-color: #000000;
-  border: 2px solid #515151;
+  /* background-color: #000000;
+  border: 2px solid #515151; */
+  background-color: #273442;
+  border: 2px solid #192431;
+
   font-size: 50px;
   color: #dedede;
-  cursor: pointer;
 
+  cursor: pointer;
   transition: all 0.6s ease;
 }
 
